--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <img src="me.jpg" alt="JavaScript logo" />
+      <img src="assets/me.jpg" alt="ProfilePic" />
       <div>
         <h1>MALIVIWE DIKO</h1>
         <p>Portfolio to list my Work experience, Education and all you need to know about my professional life </p>
