--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
       </menu>
       <div id="tab-content"></div>
     </div>
+
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <img src="assets/me.jpg" id="modalImage" alt="Preview Image">
+      </div>
+    </div>
   </body>
 </html>
