--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="myModal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
-        <img src="assets/me.jpg" id="modalImage" alt="Preview Image">
+        <img src="assets/uj_cert.JPG" id="modalImage" alt="Preview Image">
       </div>
     </div>
   </body>
